--- a/css/styles.css
+++ b/css/styles.css
@@ -69,5 +69,11 @@ button {
     border-radius: 10px;
     padding: 5px 20px;
     border: 0px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: rgb(69, 142, 86);
 }
 
