--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,20 @@ footer {
     font-size: 15px;
 }
 
+#footer-logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#footer-logo img {
+    width: auto;
+    height: 25px;
+    padding: 4px;
+}
+
 button {
     background-color: rgb(90, 186, 113);
     color: white;
