--- a/css/styles-home.css
+++ b/css/styles-home.css
@@ -6,15 +6,23 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 30px;
+    margin: 20px;
+
+    border: 1px solid black;
 }
 
 .videos video {
     margin: 0px 20px;
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    min-width: 200px;
+    max-width: 300px;
+    filter: brightness(0.7);
+    
+    border: 2px solid red;
 }
 
 .video-description {
     margin: 0px 20px;
+    font-size: 20px;
+    font-weight: 400px;
 }
