--- a/css/styles-contact.css
+++ b/css/styles-contact.css
@@ -1,13 +1,21 @@
+@import "styles.css";
+
+:root {
+    --form-color: rgb(223, 236, 235);
+    --border-color: rgb(190, 187, 187);
+}
+
 /* additional styles for contact.html */
 main {
-    background-color: rgb(247, 250, 251);
+    background-color: var(--body-color, white);
     margin: 0px 20px;
     border-radius: 2px;
-    padding: 20px 20px;
+    padding: 20px;
 }
 
 details summary{
-    font-size: 20px;
+    /* font-size: 20px; */
+    font-size: 1.25rem;
     font-weight: bold;
 }
 
@@ -24,7 +32,7 @@ details ul {
 } */
 
 #contact_form {
-    background-color: rgb(223, 236, 235);
+    background-color: var(--form-color, white);
     margin: 20px;
     border-radius: 4px;
     /* border: 1px solid gray; */
@@ -35,9 +43,40 @@ details ul {
 input, select, textarea {
     padding: 5px 10px;
     border-radius: 10px;
-    border: 2px solid rgb(190, 187, 187);
+    border: 2px solid var(--border-color, black);
 }
 
 textarea {
     margin-top: 10px;
+}
+
+/* Very Small Screens (Phone) */
+@media screen and (max-width: 480px) {
+    main {
+        margin: 0; /* Remove the left and right margin on smaller screens */
+        padding: 10px; /* Reduce padding for smaller screens */
+    }
+
+    details summary {
+        font-size: 1rem; /* Further reduce font size for very small screens */
+    }
+
+    #contact_form {
+        margin: 10px;
+        padding: 10px 20px; /* Adjust padding for smaller screens */
+    }
+
+    input, select, textarea {
+        padding: 5px;
+    }
+}
+
+/* Tablets or Restrictive Laptops */
+@media screen and (min-width: 481px) and (max-width: 1024px) {
+   
+}
+
+/* Desktops */
+@media screen and (min-width: 1025px) {
+    
 }
