--- a/css/styles-about.css
+++ b/css/styles-about.css
@@ -1,214 +1,146 @@
 @import "styles.css";
 
-main {
-    background-color: var(--body-color, white);
+:root {
+    --bar-background-color: rgb(223, 236, 235);
+    --bar-color: rgb(27, 156, 135);
 }
 
-/* Intro class css */
-.intro {
-    background-color: var(--main-color, white);
-    padding: 1.25rem 1.25rem 3.75rem;
-    display: flex;
-    flex-direction: row;
-    /*align-items: center;*/
-    /*justify-content: center;*/
-}
-
-.intro img {
-    height: 200px;
-    width: 200px;
-    /*padding: 1rem 2rem;*/
-    margin: 40px;
-}
-
-.info-content {
-    padding: 1rem 2rem;
-    border-radius: 20px;
-    margin: 20px;
-    text-align: left;
-    flex: 1;
-    max-width: 800px;
-    min-width: 500px;
-}
-
-.info-content h2 {
-    margin: 0;
-    padding: 0;
-}
-
-.info-content td {
-    vertical-align: top;
-}
-
-.info-content h3 {
-    margin: 0;
-}
-
-.info-content td p {
-    margin: 0;
-}
-
-.info-content ol {
-    margin: 0;
-    padding-left: 20px;
-}
-
-/*aside {*/
-/*    !* padding: 10px 20px; *!*/
-/*    padding: 1rem 2rem;*/
-/*    background-color: var(--body-color, white);*/
-/*    border-radius: 10px;*/
-/*    width: 200px;*/
-/*    font-style: italic;*/
-/*    display: none;*/
-/*}*/
-
-/* Work class css */
-/*.work {*/
-/*    display: flex;*/
-/*    flex-direction: row;*/
-/*    padding: 1.25rem 1.25rem 3.75rem;*/
-/*    background-color: var(--body-color, white);*/
-/*}*/
 .work {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr;
-    grid-column-gap: 20px;
-    grid-row-gap: 0px;
+    display: flex;
+    flex-direction: column;
     width: 90%;
     margin: 0 auto;
-    background-color: var(--body-color, white);
 }
 
 .work-content {
-    grid-area: 1 / 1 / 2 / 2;
-    /*padding: 1rem 2rem;*/
-    margin: 40px 0 40px 40px;
-    /*transition: padding 0.3s;*/
     word-wrap: break-word;
-}
-.work-content ul {
-    display: flex;
-    flex-direction: column;
-}
-.resume {
-    grid-area: 1 / 2 / 2 / 3;
-    text-align: center;
-    margin: 40px 40px 40px 0;
-}
-
-.resume iframe {
-    border: 1px solid black;
-    height: 500px;
-    width: 400px;
-}
-
-a.download-button {
-    background-color: var(--button-color, var(--fallback-button-color));
-    color: white;
-    border-radius: 10px;
-    padding: 0.3rem 1.25rem;
-    border: 0;
-    display: inline-block;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    text-decoration: none;
-}
-
-a.download-button:hover {
-    background-color: var(--button-color-hover, black);
-}
-
-/* Skills class css */
-.skills {
-    background-color: var(--main-color, white);
-    padding: 1.25rem 1.25rem 3.75rem;
-    text-align: center;
-}
-
-.skills h2 {
-    margin: 0;
-    padding: 1.5rem;
-}
-
-.tables {
-    display: flex;
-    justify-content: center;
-}
-
-.tables table {
-    background-color: white;
-    /* padding: 10px; */
-    padding: 1rem;
-    margin: 20px;
-}
-
-.tables caption {
-    font-size: 1.2em;
-    font-weight: bold;
-    background-color: white;
-    /* padding: 10px; */
-    padding: 1rem;
-}
-
-.tables th {
-    color: #333;
-    font-weight: bold;
-    /* padding: 10px; */
-    padding: 1rem;
-    background-color: rgb(106, 201, 230);
-}
-
-.tables td {
-    /* padding: 10px; */
-    padding: 1rem;
-}
-
-.tables tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-/* Very Small Screens (Phone) */
-@media screen and (max-width: 480px) {
-    h2 {
+    > h2 {
         text-align: center;
     }
-    .intro {
-        flex-direction: column;
+    > ul {
+        > li {
+            padding: 20px;
+        }
+    }
+}
+
+.resume {
+    text-align: center;
+    padding: 40px 0;
+    > p {
+        font-size: 1.5rem;
+        padding:0 0 20px;
+    }
+    > a.download-button {
+        background-color: var(--button-color, var(--fallback-button-color));
+        color: white;
+        border-radius: 10px;
+        font-size: 20px;
+        padding: 0.3rem 1.25rem;
+        border: 0;
+        display: inline-block;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        text-decoration: none;
+    }
+    > a.download-button:hover {
+        background-color: var(--button-color-hover, black);
+    }
+}
+
+.skills {
+    padding: 40px;
+    width: 90%;
+    margin: 0 auto;
+    > h2 {
+        text-align: center;
+    }
+}
+
+.skills-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 2rem;
+    grid-row-gap: 0px;
+}
+
+.tech-skills {
+    grid-area: 1 / 1 / 2 / 2;
+    padding: 2rem 0;
+}
+
+.soft-skills {
+    grid-area: 1 / 2 / 2 / 3;
+    padding: 2rem 0;
+}
+
+.skill {
+    padding: 0.5rem 0;
+}
+
+.skill-bar {
+    width: 100%;
+    background-color: var(--bar-background-color, gray);
+}
+
+.skill-level {
+    color: white;
+    text-align: right;
+    padding-right: 0.5rem;
+    background-color: var(--bar-color, black);
+}
+
+.skill-bar .percent5   { width: 5%; }
+.skill-bar .percent10  { width: 10%; }
+.skill-bar .percent15  { width: 15%; }
+.skill-bar .percent20  { width: 20%; }
+.skill-bar .percent25  { width: 25%; }
+.skill-bar .percent30  { width: 30%; }
+.skill-bar .percent35  { width: 35%; }
+.skill-bar .percent40  { width: 40%; }
+.skill-bar .percent45  { width: 45%; }
+.skill-bar .percent50  { width: 50%; }
+.skill-bar .percent55  { width: 55%; }
+.skill-bar .percent60  { width: 60%; }
+.skill-bar .percent65  { width: 65%; }
+.skill-bar .percent70  { width: 70%; }
+.skill-bar .percent75  { width: 75%; }
+.skill-bar .percent80  { width: 80%; }
+.skill-bar .percent85  { width: 85%; }
+.skill-bar .percent90  { width: 90%; }
+.skill-bar .percent95  { width: 95%; }
+.skill-bar .percent100 { width: 100%; }
+
+@media screen and (max-width: 480px) {
+    .resume {
+        padding: 30px 0;
+        > p {
+            font-size: 1.25rem;
+            padding:0 0 20px;
+        }
+        > a.download-button {
+            font-size: 15px;
+        }
     }
 
-    .work {
+    .skills {
+        padding: 40px 0;
+    }
+
+    .skills-container {
+        display: flex;
         flex-direction: column;
-        padding: 20px 0px 0px;
-    }
-    .work-content {
-        padding: 0px 10px;
-        margin: 0;
-    }
-    .resume iframe {
-        display: none;
-    }
-    .tables {
-        flex-direction: column;
+        > div {
+            padding: 1rem 0;
+        }
     }
 }
 
 /* Tablets or Restrictive Laptops */
 @media screen and (min-width: 481px) and (max-width: 1024px) {
-    /* .work {
-        flex-direction: column;
-    } */
 }
 
 /* Desktops */
 @media screen and (min-width: 1025px) {
-    /*.work-content {*/
-    /*    padding: 1rem 0;*/
-    /*    margin: 1rem;*/
-    /*}*/
-
-    /*.resume {*/
-    /*    margin: 1rem;*/
-    /*}*/
 }
