--- a/css/styles-home.css
+++ b/css/styles-home.css
@@ -1,5 +1,9 @@
 @import "styles.css";
 
+header h1 {
+    padding-bottom: 0;
+}
+
 main {
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -12,9 +16,11 @@ main {
 
 .headshot {
     grid-area: 1 / 1 / 4 / 2;
+    display: flex;
+    justify-content: center;
 }
 
-.headshot * {
+.headshot img {
     border-radius: 20%;
     height: 200px;
     width: 200px;
@@ -44,51 +50,37 @@ main {
     flex: 1;
 }
 
-/* .videos {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-    padding: 20px;
-} */
-
-/* .videos video {
-    margin: 0px 20px;
-    width: 300px;
-    filter: brightness(0.7);
-} */
-
-/* .video-description {
-    margin: 0px 20px;
-    font-size: 1.25rem;
-    font-weight: 400;
-} */
-
 /* Very Small Screens (Phone) */
 @media screen and (max-width: 480px) {
-    /* .videos {
-        flex-direction: column;
+    main {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        grid-column-gap: 20px;
+        grid-row-gap: 0px;
+        width: 80%;
+        margin: 3rem auto;
+    }
+    .headshot {
+        grid-area: 1 / 1 / 2 / 2;
     }
 
-    .videos video {
-        width: 200px;
-    } */
+    .education {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+    
+    .location {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+    
+    .interests {
+        grid-area: 4 / 1 / 5 / 2;
+    }
 }
 
 /* Tablets or Restrictive Laptops */
 @media screen and (min-width: 481px) and (max-width: 1024px) {
-    /* .videos {
-        margin: 0px;
-        padding: 10px;
-    }
 
-    .videos video {
-        width: 150px;
-    }
-
-    .video-description {
-        font-size: 1rem;
-    } */
 }
 
 /* Desktops */
