--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 :root {
     --main-color: rgb(178, 211, 207);
-    /* --body-color: rgb(227, 191, 166); */
     --body-color: rgb(247, 250, 251);
     --button-color: rgb(90, 186, 113);
     --fallback-button-color: rgb(171, 250, 189);
@@ -20,7 +19,8 @@ body {
     font-family: var(--font-family, var(--fallback-font));
 }
 
-header, footer {
+header,
+footer {
     background-color: var(--main-color, white);
     text-align: center;
 }
@@ -32,10 +32,11 @@ main {
 }
 
 header h1 {
-    font-size: 4rem; 
+    font-size: 4rem;
     padding-top: 8rem;
     width: 90%;
     margin: 0 auto;
+    padding-bottom: 3.75rem;
 }
 
 header h3 {
@@ -46,7 +47,6 @@ header h3 {
     margin: 0 auto;
 }
 
-/* Style for the navigation bar */
 header nav {
     position: fixed;
     top: 0;
@@ -54,33 +54,25 @@ header nav {
     background-color: white;
     padding: 1rem 0;
     overflow: hidden;
-}
-
-/* Style for the navigation menu (ul) */
-header nav ul {
-    list-style-type: none;
-    float: right;
-}
-
-/* Style for the navigation menu items (li) */
-header nav ul li {
-    display: inline;
-}
-
-/* Style for the navigation links (a) */
-header nav ul li a {
-    text-decoration: none;
-    color: black;
-    padding: 10px 10px;
-    margin-left: 5px;
-    font-size: 1rem;
-    transition: color 0.3s ease;
-} 
-
-/* Style for the navigation links on hover */
-header nav ul li a:hover {
-    background-color: var(--main-color, grey);
-    transition: background-color 0.3s ease;
+    > ul {
+        list-style-type: none;
+        float: right;
+        > li {
+            display: inline;
+            > a {
+                text-decoration: none;
+                color: black;
+                padding: 10px 10px;
+                margin-left: 5px;
+                font-size: 1rem;
+                transition: color 0.3s ease;
+            }
+            > a:hover {
+                background-color: var(--main-color, grey);
+                transition: background-color 0.3s ease;
+            }
+        }
+    }
 }
 
 #side-menu {
