--- a/css/styles-contact.css
+++ b/css/styles-contact.css
@@ -5,6 +5,12 @@
     --border-color: rgb(190, 187, 187);
 }
 
+.nav-contact {
+    background-color: var(--button-color-hover, grey);
+    color: white;
+    pointer-events: none;
+}
+
 main {
     background-color: var(--body-color, white);
     margin: 0px 20px;
