--- a/css/styles-home.css
+++ b/css/styles-home.css
@@ -4,6 +4,12 @@ header h1 {
     padding-bottom: 0;
 }
 
+.nav-home {
+    background-color: var(--button-color-hover, grey);
+    color: white;
+    pointer-events: none;
+}
+
 main {
     display: grid;
     grid-template-columns: 1fr 2fr;
