--- a/css/styles-projects.css
+++ b/css/styles-projects.css
@@ -16,7 +16,7 @@
 .project-content {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 60%;
     margin: 1rem;
     > a {
         text-align: center;
@@ -53,7 +53,7 @@
 }
 
 figure {
-    width: 50%;
+    width: 40%;
     margin: 1rem;
     text-align: center;
     > img {
@@ -96,7 +96,10 @@ figure {
 
 /* Tablets or Restrictive Laptops */
 @media screen and (min-width: 481px) and (max-width: 1024px) {
-   
+    figure img {
+        width: 250px;
+        height: auto;
+    }
 }
 
 /* Desktops */
