--- a/css/styles-about.css
+++ b/css/styles-about.css
@@ -16,16 +16,50 @@
     flex-direction: column;
     width: 90%;
     margin: 0 auto;
-}
-
-.work-content {
     word-wrap: break-word;
     > h2 {
         text-align: center;
+        font-size: 2.5rem;
     }
     > ul {
+        list-style-type: none;
         > li {
             padding: 20px;
+            > h3 {
+                font-size: 2rem;
+                padding-bottom: 10px;
+                &::after {
+                    content: "";
+                    display: block;
+                    width: 40%;
+                    height: 4px;
+                    background-color: var(--button-color-hover, rgb(18, 138, 213));
+                    margin: 4px 0;
+                }
+            }
+            > p {
+                font-size: 1.5rem;
+                padding-bottom: 10px;
+            }
+        }
+    }
+}
+
+.timeline {
+    font-style: italic;
+    font-size: 1.2rem;
+}
+
+.work-description {
+    font-size: 1.4rem;
+    list-style-type: square;
+    > li {
+        margin: 0 30px;
+        > ul {
+            list-style-type: circle;
+            > li {
+                margin: 0 30px;
+            }
         }
     }
 }
@@ -119,6 +153,35 @@
 .skill-bar .percent100 { width: 100%; }
 
 @media screen and (max-width: 480px) {
+    .work {
+        width: 95%;
+        margin: 0 auto;
+        > h2 {
+            font-size: 1.5rem;
+        }
+        > ul > li {
+            > h3 {
+                font-size: 1.25rem;
+            }
+            > p {
+                font-size: 1rem;
+            }
+        }
+    }
+
+    .timeline {
+        font-size: 1rem;
+    }
+
+    .work-description {
+        width: 100%;
+        font-size: 1rem;
+    }
+
+    .work-description li {
+        margin: 0 10px;
+    }
+
     .resume {
         padding: 30px 0;
         > p {
@@ -141,13 +204,4 @@
             padding: 1rem 0;
         }
     }
-}
-
-/* Tablets or Restrictive Laptops */
-@media screen and (min-width: 481px) and (max-width: 1024px) {
-
-}
-
-/* Desktops */
-@media screen and (min-width: 1025px) {
 }
