--- a/css/styles-about.css
+++ b/css/styles-about.css
@@ -19,14 +19,14 @@
     word-wrap: break-word;
     > h2 {
         text-align: center;
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     > ul {
         list-style-type: none;
         > li {
             padding: 20px;
             > h3 {
-                font-size: 2rem;
+                font-size: 1.5rem;
                 padding-bottom: 10px;
                 &::after {
                     content: "";
@@ -38,20 +38,20 @@
                 }
             }
             > p {
-                font-size: 1.5rem;
+                font-size: 1.2rem;
                 padding-bottom: 10px;
             }
         }
     }
 }
 
-.timeline {
+p:has(+ ul) {
     font-style: italic;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .work-description {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     list-style-type: square;
     > li {
         margin: 0 30px;
@@ -68,14 +68,14 @@
     text-align: center;
     padding: 40px 0;
     > p {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         padding:0 0 20px;
     }
     > a.download-button {
         background-color: var(--button-color, var(--fallback-button-color));
         color: white;
         border-radius: 10px;
-        font-size: 20px;
+        font-size: 15px;
         padding: 0.3rem 1.25rem;
         border: 0;
         display: inline-block;
