--- a/css/styles-home.css
+++ b/css/styles-home.css
@@ -26,12 +26,6 @@ main {
     justify-content: center;
 }
 
-.headshot img {
-    border-radius: 20%;
-    height: 200px;
-    width: 200px;
-}
-
 .education {
     grid-area: 1 / 2 / 2 / 3;
 }
@@ -56,33 +50,43 @@ main {
     flex: 1;
 }
 
-/* Very Small Screens (Phone) */
+h2:has(+ hr) {
+    color: color-mix(in srgb, yellow 40%, green);
+}
+
 @media screen and (max-width: 480px) {
-    header h1 {
-        padding-top: 2rem;
-    }
     main {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 1fr);
-        grid-column-gap: 20px;
-        grid-row-gap: 0px;
         width: 80%;
         margin: 3rem auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
     }
     .headshot {
         grid-area: 1 / 1 / 2 / 2;
     }
 
-    .education {
-        grid-area: 2 / 1 / 3 / 2;
+    .headshot img {
+        border-radius: 20%;
+        width: 100px;
+        height: 100px;
     }
-    
-    .location {
-        grid-area: 3 / 1 / 4 / 2;
+}
+
+@media screen and (min-width: 481px) and (max-width: 1024px) {
+    .headshot img {
+        border-radius: 20%;
+        width: 200px;
+        height: 200px;
     }
-    
-    .interests {
-        grid-area: 4 / 1 / 5 / 2;
+}
+
+@media screen and (min-width: 1025px) {
+    .headshot img {
+        border-radius: 50%;
+        width: 400px;
+        height: 400px;
     }
 }
