--- a/css/styles-projects.css
+++ b/css/styles-projects.css
@@ -20,7 +20,7 @@
     margin: 1rem;
     > a {
         text-align: center;
-        color: var(--button-color-hover, purple);
+        color: var(purple, var(--button-color-hover));
         border-radius: 10px;
         font-size: 20px;
         font-weight: bold;
@@ -35,7 +35,8 @@
         color: var(--button-color-hover, red);
     }
     > h2 {
-        font-size: 25px;
+        font-size: 1.5rem;
+        color: color(display-p3 0.4 0.7 0.25);
     }
     > h2::after {
         content: "";
@@ -47,7 +48,7 @@
     }
     > ul {
         > li {
-            font-size: 20px;
+            font-size: 1.2rem;
         }
     }
 }
@@ -56,13 +57,8 @@ figure {
     width: 40%;
     margin: 1rem;
     text-align: center;
-    > img {
-        width: auto;
-        height: 300px;
-    }
 }
 
-/* Very Small Screens (Phone) */
 @media screen and (max-width: 480px) {
     .project {
         flex-direction: column;
@@ -94,10 +90,16 @@ figure {
     }    
 }
 
-/* Tablets or Restrictive Laptops */
 @media screen and (min-width: 481px) and (max-width: 1024px) {
     figure img {
-        width: 250px;
-        height: auto;
+        height: 250px;
+        width: auto;
+    }
+}
+
+@media screen and (min-width: 1025px) {
+    figure img {
+        height: 300px;
+        width: auto;
     }
 }
