--- a/css/styles-contact.css
+++ b/css/styles-contact.css
@@ -18,6 +18,7 @@
     > summary{
         font-size: 1.25rem;
         font-weight: bold;
+        cursor: pointer;
     }
     > ul {
         list-style-type: none;
