--- a/css/styles-projects.css
+++ b/css/styles-projects.css
@@ -83,11 +83,12 @@ figure {
 
     figure {
         width: 100%;
-        > img {
-            width: auto;
-            height: 200px;
-        }
     }    
+
+    figure img {
+        height: 200px;
+        width: auto;
+    }
 }
 
 @media screen and (min-width: 481px) and (max-width: 1024px) {
